--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -10,6 +10,8 @@ main {
 }
 
 section {
-    max-width: 800px;
+    background-color: black;
+    max-width: 1000px;
     margin: 50px auto;
+    color: white;
 }
