--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,13 @@
         
       </div>
     </main>
+      <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+        })
+      }
+    </script>
     
   </body>
 </html>
